# segtree

./: CMakeLists.txt  README.md  SegmentTreeTest.cpp  relatorio.tex
src/: CMakeLists.txt  SegmentTree.h  relatorio.tex
